--- a/sondeo/templates/index/respuestas.html
+++ b/sondeo/templates/index/respuestas.html
@@ -24,8 +24,6 @@
                         {{ respuesta.respuesta }}
                     </section>
                 </div>
-                {% if respuesta.idUsuario.idUsuario == request.session.autenticado.2 %}
-                {% endif %}
             {% endfor %}
         {% else %}
             <div>        
@@ -35,23 +33,23 @@
 
         {% if contestar %}
             
-                <form action="{% url 'sondeo:guardarRespuesta' %}" name="respuestica" method="post">
-                    {% csrf_token %}
-                    <div>
-                        <input type="number" name="usuario" value="{% if request.session.autenticado %}{{ request.session.autenticado.2 }}{% endif %}" hidden>
-                        <div class="row">
-                            <div class="input-field col s6">
-                                <label for="respuesta">Respuesta De la Pregunta</label>
-                                <textarea name="respuesta" id="respuesta" cols="50" rows="10" class="validate"></textarea>
-                                <input type="number" name="idSondeo" value="{{ sondeos.idSondeos }}" hidden>
-                        
-                                <input type="button" onclick="confirmacion()" value="Enviar" >
-                            </div>
+            <form action="{% url 'sondeo:guardarRespuesta' %}" name="respuestica" method="post">
+                {% csrf_token %}
+                <div>
+                    <input type="number" name="usuario" value="{{ request.session.autenticado.2 }}" hidden>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <label for="respuesta">Respuesta De la Pregunta</label>
+                            <textarea name="respuesta" id="respuesta" cols="50" rows="10" class="validate"></textarea>
+                            <input type="number" name="idSondeo" value="{{ sondeos.idSondeos }}" hidden>
+                    
+                            <input type="button" onclick="confirmacion()" value="Enviar" >
                         </div>
-                        
-
                     </div>
-                </form>
+                    
+
+                </div>
+            </form>
             
         {% endif %}
 
