--- a/sondeo/templates/formularios/formSondeos.html
+++ b/sondeo/templates/formularios/formSondeos.html
@@ -6,12 +6,12 @@
     <h2>Bienvenido a sondeo.net {% if autenticacion %}{{ autenticacion.2 }}{% endif %}, ahora vamos a crear un nuevo sondeo</h2>
     <div class="container">
 
-        <form action="{% url 'sondeo:guardarSondeo'%}" method="post" ">
+        <form action="{% url 'sondeo:guardarSondeo'%}" method="post">
             {% csrf_token %}
             <div class="row">
                 <div class="col s12">
                     
-                    <input type="text" name="administrador" hidden value="1">
+                    <input type="text" name="administrador" hidden value="{{ request.session.autenticado.2 }}">
     
                     <div class="row">
                         <div class="input-field col s6">
