--- a/sondeo/templates/index/respuestas.html
+++ b/sondeo/templates/index/respuestas.html
@@ -1,67 +1,109 @@
 {% extends 'base.html' %} {% load static %}
 {% block titulo %}Sondeos{% endblock %}
 
-{# --------------------------------desde aqui codigo del body ------------------------------------------------------------ #}
+{# --------------------------------desde aqui codigo del body
+------------------------------------------------------------ #}
 {% block body %}
 
 <h2>Bienvenido a sondeo.net {% if request.session.autenticado %}{{ request.session.autenticado.2 }}{% endif %}</h2>
 
-    {% if sondeos %}
+{% if sondeos %}
 
-        
-        <div>
-            <h3>{{ sondeos.asunto }}</h3><br/>
-            <section>
-                {{ sondeos.descripcion }}
-            </section>
+<table>
+    <thead>
+        <tr>
+            <th>
+                <h3>Asunto pregunta</h3>
+            </th>
+            <th>
+                <h3>Descripcion pregunta</h3>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+
+            <td>
+                <h5>{{ sondeos.asunto }}</h5>
+            </td>
+            <td>
+                <h5>{{ sondeos.descripcion }}</h5>
+            </td>
+        </tr>
+
+    </tbody>
+
+
+</table>
+
+
+<h3>Respuestas</h3>
+{% if respuestas %}
+
+<table id="example3" class="table table-striped" style="width:100%">
+    <thead>
+        <tr>
+            <th>Asunto pregunta</th>
+            <th>Descripcion</th>
+            <th>usuario que respondio</th>
+            <th>Descripcion pregunta</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for respuesta in respuestas %}
+        <tr>
+
+            <td>{{ sondeos.asunto }}</td>
+            <td>{{ sondeos.descripcion }}</td>
+            <td>{{ respuesta.idUsuario }}</td>
+            <td>{{ respuesta.respuesta }}</td>
+
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+{% else %}
+<div>
+    <h5>No hay respuestas</h5><br />
+</div>
+{% endif %}
+
+{% if contestar %}
+
+<form action="{% url 'sondeo:guardarRespuesta' %}" name="respuestica" method="post">
+    {% csrf_token %}
+    <div>
+        <input type="number" name="usuario"
+            value="{% if request.session.autenticado %}{{ request.session.autenticado.2 }}{% endif %}" hidden>
+        <div class="row">
+            <div class="input-field col s6">
+                <label for="respuesta">Respuesta De la Pregunta</label>
+                <textarea name="respuesta" id="respuesta" cols="50" rows="10" class="validate"></textarea>
+                <input type="number" name="idSondeo" value="{{ sondeos.idSondeos }}" hidden>
+
+                <input type="button" onclick="confirmacion()" value="Enviar">
+            </div>
         </div>
-        <h3>Respuestas</h3>
-        {% if respuestas %}
-            {% for respuesta in respuestas %}
-                <div>        
-                    <h5>{{ respuesta.idUsuario }}</h5><br/>
-                    <section border="1">
-                        {{ respuesta.respuesta }}
-                    </section>
-                </div>
-            {% endfor %}
-        {% else %}
-            <div>        
-                <h5>No hay respuestas</h5><br/>
-            </div> 
-        {% endif %}
-
-        {% if contestar %}
-            
-            <form action="{% url 'sondeo:guardarRespuesta' %}" name="respuestica" method="post">
-                {% csrf_token %}
-                <div>
-                    <input type="number" name="usuario" value="{{ request.session.autenticado.2 }}" hidden>
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <label for="respuesta">Respuesta De la Pregunta</label>
-                            <textarea name="respuesta" id="respuesta" cols="50" rows="10" class="validate"></textarea>
-                            <input type="number" name="idSondeo" value="{{ sondeos.idSondeos }}" hidden>
-                    
-                            <input type="button" onclick="confirmacion()" value="Enviar" >
-                        </div>
-                    </div>
-                    
-
-                </div>
-            </form>
-            
-        {% endif %}
 
 
-    {% endif %}
+    </div>
+</form>
 
-     <script>
-        function confirmacion(){
-            if (confirm('¿Estas seguro de montar su respuesta? no podra editarla despues')){
-                document.respuestica.submit()
-            }
+{% endif %}
+
+
+{% endif %}
+
+<script>
+    function confirmacion() {
+        if (confirm('¿Estas seguro de montar su respuesta? no podra editarla despues')) {
+            document.respuestica.submit()
         }
-     </script>           
+    }
+</script>
+
+
+
 
 {% endblock %}
