--- a/sondeo/templates/formularios/certificado.html
+++ b/sondeo/templates/formularios/certificado.html
@@ -2,8 +2,8 @@
 {% block titulo %}Certificado{% endblock %}
 
 {% block body %}
-
-
+{# Esto es el html que se convertira en pdf #}
+    
 
 <h1> Generar Certificado</h1>
 
